Make files easier to read

--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -4,7 +4,8 @@
   <link rel="stylesheet" href="public/stylesheets/main.min.css">
   <link rel="icon" href="public/images/icon.png" type="image/png">
   <title>À la française - ohmyfood</title>
-  <meta name="description" content="Découvrez des restaurants d'exception, sélectionnés par nos soins.">
+  <meta name="description" content="Découvrez des restaurants d'exception,
+  sélectionnés par nos soins.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -15,7 +16,8 @@
   </header>
 
   <div class="presentation">
-    <img class="presentation__picture" src="public/images/restaurants/three.jpg" alt="À la française" />
+    <img class="presentation__picture" src="public/images/restaurants/three.jpg"
+    alt="À la française" />
     <div class="presentation__heading">
       <h2 class="presentation__name">À la française</h2>
       <i class="like-button like-button--menu fas fa-heart"></i>
@@ -29,7 +31,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Tartare de poulpe acidulé</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Tartare de poulpe acidulé
+          </span>
           <span class="dishcard__text">Aux zestes d'orange</span>
         </span>
         <span class="dishcard__r-container">
@@ -40,7 +44,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Velouté de légumes d'antan</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Velouté de légumes d'antan
+          </span>
           <span class="dishcard__text">Carotte, panais, topinambour</span>
         </span>
         <span class="dishcard__r-container">
@@ -51,7 +57,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Soupe à l'oignon</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Soupe à l'oignon
+          </span>
           <span class="dishcard__text">Revisitée</span>
         </span>
         <span class="dishcard__r-container">
@@ -69,7 +77,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Coquilles Saint-Jacques</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Coquilles Saint-Jacques
+          </span>
           <span class="dishcard__text">Accompagnées d'une purée de panais</span>
         </span>
         <span class="dishcard__r-container">
@@ -80,7 +90,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Magret de canard</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Magret de canard
+          </span>
           <span class="dishcard__text">Et parmentier de pommes de terre</span>
         </span>
         <span class="dishcard__r-container">
@@ -91,7 +103,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Pigeonneau d’Ille-et-Vilaine</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Pigeonneau d’Ille-et-Vilaine
+          </span>
           <span class="dishcard__text">Sur son lit de gnocchis aux légumes</span>
         </span>
         <span class="dishcard__r-container">
@@ -109,7 +123,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Pétales de violettes glacés</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Pétales de violettes glacés
+          </span>
           <span class="dishcard__text">Et purée de noisettes</span>
         </span>
         <span class="dishcard__r-container">
@@ -120,7 +136,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Fondant au chocolat</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Fondant au chocolat
+          </span>
           <span class="dishcard__text">Revisité</span>
         </span>
         <span class="dishcard__r-container">
@@ -131,7 +149,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Millefeuille croustillant</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Millefeuille croustillant
+          </span>
           <span class="dishcard__text">Myrtilles et pâte d’amande</span>
         </span>
         <span class="dishcard__r-container">
@@ -147,10 +167,18 @@
   <footer class="footer">
     <h2 class="footer__heading">ohmyfood</h2>
     <ul class="footer__links">
-      <li class="footer__link footer__link--with-icon"><i class="fas fa-utensils"></i> <a href="">Proposer un restaurant</a></li>
-      <li class="footer__link footer__link--with-icon"><i class="fad fa-hands-helping"></i> <a href="">Devenir partenaire</a></li>
-      <li class="footer__link"><a href="">Mentions légales</a></li>
-      <li class="footer__link"><a href="mailto:contact@mail.com">Contact</a></li>
+      <li class="footer__link footer__link--with-icon">
+        <i class="fas fa-utensils"></i> <a href="">Proposer un restaurant</a>
+      </li>
+      <li class="footer__link footer__link--with-icon">
+        <i class="fad fa-hands-helping"></i> <a href="">Devenir partenaire</a>
+      </li>
+      <li class="footer__link">
+        <a href="">Mentions légales</a>
+      </li>
+      <li class="footer__link">
+        <a href="mailto:contact@mail.com">Contact</a>
+      </li>
     </ul>
   </footer>
 
