--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -4,7 +4,8 @@
   <link rel="stylesheet" href="public/stylesheets/main.min.css">
   <link rel="icon" href="public/images/icon.png" type="image/png">
   <title>La note enchantée - ohmyfood</title>
-  <meta name="description" content="Découvrez des restaurants d'exception, sélectionnés par nos soins.">
+  <meta name="description" content="Découvrez des restaurants d'exception,
+  sélectionnés par nos soins.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -15,7 +16,8 @@
   </header>
 
   <div class="presentation">
-    <img class="presentation__picture" src="public/images/restaurants/two.jpg" alt="La note enchantée" />
+    <img class="presentation__picture" src="public/images/restaurants/two.jpg"
+    alt="La note enchantée" />
     <div class="presentation__heading">
       <h2 class="presentation__name">La note enchantée</h2>
       <i class="like-button like-button--menu fas fa-heart"></i>
@@ -29,7 +31,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Ravioles de foie gras</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Ravioles de foie gras
+          </span>
           <span class="dishcard__text">Accompagnés de leur crème à la truffe</span>
         </span>
         <span class="dishcard__r-container">
@@ -40,7 +44,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Caviar osciètre</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Caviar osciètre
+          </span>
           <span class="dishcard__text">Sur blini à la farine de blé noir</span>
         </span>
         <span class="dishcard__r-container">
@@ -51,7 +57,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Homard et espuma de potiron</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Homard et espuma de potiron
+          </span>
           <span class="dishcard__text">Mariné aux zestes d'orange</span>
         </span>
         <span class="dishcard__r-container">
@@ -62,7 +70,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Foie gras de canard cuit entier</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Foie gras de canard cuit entier
+          </span>
           <span class="dishcard__text">Confiture de figue et pain toasté</span>
         </span>
         <span class="dishcard__r-container">
@@ -80,7 +90,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Noix de coquilles Saint-Jacques</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Noix de coquilles Saint-Jacques
+          </span>
           <span class="dishcard__text">Sur lit de purée de céleri-rave</span>
         </span>
         <span class="dishcard__r-container">
@@ -91,7 +103,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Langoustine poêlée</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Langoustine poêlée
+          </span>
           <span class="dishcard__text">Purée de patate douce</span>
         </span>
         <span class="dishcard__r-container">
@@ -102,7 +116,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Mijoté de queue de boeuf</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Mijoté de queue de boeuf
+          </span>
           <span class="dishcard__text">Et riz sauvage aux zestes de citron</span>
         </span>
         <span class="dishcard__r-container">
@@ -120,7 +136,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Macaron noisette et chocolat</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Macaron noisette et chocolat
+          </span>
           <span class="dishcard__text">Glace au caramel brun et sel de Guérande</span>
         </span>
         <span class="dishcard__r-container">
@@ -131,7 +149,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Baba au rhum revisité</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Baba au rhum revisité
+          </span>
           <span class="dishcard__text">Avec son coulis de citron</span>
         </span>
         <span class="dishcard__r-container">
@@ -142,7 +162,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Tarte au citron meringuée</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Tarte au citron meringuée
+          </span>
           <span class="dishcard__text">Déstructurée</span>
         </span>
         <span class="dishcard__r-container">
@@ -158,10 +180,18 @@
   <footer class="footer">
     <h2 class="footer__heading">ohmyfood</h2>
     <ul class="footer__links">
-      <li class="footer__link footer__link--with-icon"><i class="fas fa-utensils"></i> <a href="">Proposer un restaurant</a></li>
-      <li class="footer__link footer__link--with-icon"><i class="fad fa-hands-helping"></i> <a href="">Devenir partenaire</a></li>
-      <li class="footer__link"><a href="">Mentions légales</a></li>
-      <li class="footer__link"><a href="mailto:contact@mail.com">Contact</a></li>
+      <li class="footer__link footer__link--with-icon">
+        <i class="fas fa-utensils"></i> <a href="">Proposer un restaurant</a>
+      </li>
+      <li class="footer__link footer__link--with-icon">
+        <i class="fad fa-hands-helping"></i> <a href="">Devenir partenaire</a>
+      </li>
+      <li class="footer__link">
+        <a href="">Mentions légales</a>
+      </li>
+      <li class="footer__link">
+        <a href="mailto:contact@mail.com">Contact</a>
+      </li>
     </ul>
   </footer>
 
