--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -4,7 +4,8 @@
   <link rel="stylesheet" href="public/stylesheets/main.min.css">
   <link rel="icon" href="public/images/icon.png" type="image/png">
   <title>La palette du goût - ohmyfood</title>
-  <meta name="description" content="Découvrez des restaurants d'exception, sélectionnés par nos soins.">
+  <meta name="description" content="Découvrez des restaurants d'exception,
+  sélectionnés par nos soins.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -15,7 +16,8 @@
   </header>
 
   <div class="presentation">
-    <img class="presentation__picture" src="public/images/restaurants/one.jpg" alt="La palette du goût" />
+    <img class="presentation__picture" src="public/images/restaurants/one.jpg"
+    alt="La palette du goût" />
     <div class="presentation__heading">
       <h2 class="presentation__name">La palette du goût</h2>
       <i class="like-button like-button--menu fas fa-heart"></i>
@@ -29,7 +31,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Fricassée d'escargot</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Fricassée d'escargot
+          </span>
           <span class="dishcard__text">Au piment d'espelette</span>
         </span>
         <span class="dishcard__r-container">
@@ -40,7 +44,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Foie gras de canard mi-cuit</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Foie gras de canard mi-cuit
+          </span>
           <span class="dishcard__text">Et ses copeaux de truffe noire</span>
         </span>
         <span class="dishcard__r-container">
@@ -51,7 +57,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Oeuf au plat</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Oeuf au plat
+          </span>
           <span class="dishcard__text">Assaisonné à la truffe sur lit de caviar</span>
         </span>
         <span class="dishcard__r-container">
@@ -69,7 +77,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Filet de boeuf aux herbes</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Filet de boeuf aux herbes
+          </span>
           <span class="dishcard__text">Accompagné de sa ribambelle de légumes</span>
         </span>
         <span class="dishcard__r-container">
@@ -80,7 +90,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Parmentier de queue de boeuf</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Parmentier de queue de boeuf
+          </span>
           <span class="dishcard__text">À la truffe noire sur sa purée de panais</span>
         </span>
         <span class="dishcard__r-container">
@@ -91,7 +103,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Filet de turbot</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Filet de turbot
+          </span>
           <span class="dishcard__text">Aux agrumes</span>
         </span>
         <span class="dishcard__r-container">
@@ -109,7 +123,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Paris-Brest</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Paris-Brest
+          </span>
           <span class="dishcard__text">Revisité</span>
         </span>
         <span class="dishcard__r-container">
@@ -120,7 +136,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Macaron au chocolat d'exception</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Macaron au chocolat d'exception
+          </span>
           <span class="dishcard__text">Et glace à la vanille de Madagascar</span>
         </span>
         <span class="dishcard__r-container">
@@ -131,7 +149,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Mousse au chocolat</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Mousse au chocolat
+          </span>
           <span class="dishcard__text">Au piment d'Espelette et à la truffe noire</span>
         </span>
         <span class="dishcard__r-container">
@@ -147,10 +167,18 @@
   <footer class="footer">
     <h2 class="footer__heading">ohmyfood</h2>
     <ul class="footer__links">
-      <li class="footer__link footer__link--with-icon"><i class="fas fa-utensils"></i> <a href="">Proposer un restaurant</a></li>
-      <li class="footer__link footer__link--with-icon"><i class="fad fa-hands-helping"></i> <a href="">Devenir partenaire</a></li>
-      <li class="footer__link"><a href="">Mentions légales</a></li>
-      <li class="footer__link"><a href="mailto:contact@mail.com">Contact</a></li>
+      <li class="footer__link footer__link--with-icon">
+        <i class="fas fa-utensils"></i> <a href="">Proposer un restaurant</a>
+      </li>
+      <li class="footer__link footer__link--with-icon">
+        <i class="fad fa-hands-helping"></i> <a href="">Devenir partenaire</a>
+      </li>
+      <li class="footer__link">
+        <a href="">Mentions légales</a>
+      </li>
+      <li class="footer__link">
+        <a href="mailto:contact@mail.com">Contact</a>
+      </li>
     </ul>
   </footer>
 
