--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -4,7 +4,8 @@
   <link rel="stylesheet" href="public/stylesheets/main.min.css">
   <link rel="icon" href="public/images/icon.png" type="image/png">
   <title>Le délice des sens - ohmyfood</title>
-  <meta name="description" content="Découvrez des restaurants d'exception, sélectionnés par nos soins.">
+  <meta name="description" content="Découvrez des restaurants d'exception,
+  sélectionnés par nos soins.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -15,7 +16,8 @@
   </header>
 
   <div class="presentation">
-    <img class="presentation__picture" src="public/images/restaurants/four.jpg" alt="Le délice des sens" />
+    <img class="presentation__picture" src="public/images/restaurants/four.jpg"
+    alt="Le délice des sens" />
     <div class="presentation__heading">
       <h2 class="presentation__name">Le délice des sens</h2>
       <i class="like-button like-button--menu fas fa-heart"></i>
@@ -29,7 +31,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Tartare de thon</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Tartare de thon
+          </span>
           <span class="dishcard__text">Assaisonné au yuzu</span>
         </span>
         <span class="dishcard__r-container">
@@ -40,7 +44,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Bouchée de homard croustillant</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Bouchée de homard croustillant
+          </span>
           <span class="dishcard__text">Et sa farandole de petits légumes</span>
         </span>
         <span class="dishcard__r-container">
@@ -51,7 +57,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Velouté de cèpes</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Velouté de cèpes
+          </span>
           <span class="dishcard__text">Aux truffes</span>
         </span>
         <span class="dishcard__r-container">
@@ -69,7 +77,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Poulet rôti aux herbes de Provence</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Poulet rôti aux herbes de Provence
+          </span>
           <span class="dishcard__text">Et sa crème de truffe</span>
         </span>
         <span class="dishcard__r-container">
@@ -80,7 +90,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Langouste rôtie</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Langouste rôtie
+          </span>
           <span class="dishcard__text">Et ses légumes de saison</span>
         </span>
         <span class="dishcard__r-container">
@@ -91,7 +103,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Côte de boeuf Angus</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Côte de boeuf Angus
+          </span>
           <span class="dishcard__text">Et sa purée de panais</span>
         </span>
         <span class="dishcard__r-container">
@@ -109,7 +123,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Farandole de desserts</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Farandole de desserts
+          </span>
           <span class="dishcard__text">Du chef</span>
         </span>
         <span class="dishcard__r-container">
@@ -120,7 +136,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Crème brulée</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Crème brulée
+          </span>
           <span class="dishcard__text">Revisitée</span>
         </span>
         <span class="dishcard__r-container">
@@ -131,7 +149,9 @@
       <label class="dishcard">
         <input type="checkbox" class="dishcard__checkbox" />
         <span class="dishcard__l-container">
-          <span class="dishcard__text dishcard__text--heading">Tiramisu</span>
+          <span class="dishcard__text dishcard__text--heading">
+            Tiramisu
+          </span>
           <span class="dishcard__text">À la noisette</span>
         </span>
         <span class="dishcard__r-container">
@@ -147,10 +167,18 @@
   <footer class="footer">
     <h2 class="footer__heading">ohmyfood</h2>
     <ul class="footer__links">
-      <li class="footer__link footer__link--with-icon"><i class="fas fa-utensils"></i> <a href="">Proposer un restaurant</a></li>
-      <li class="footer__link footer__link--with-icon"><i class="fad fa-hands-helping"></i> <a href="">Devenir partenaire</a></li>
-      <li class="footer__link"><a href="">Mentions légales</a></li>
-      <li class="footer__link"><a href="mailto:contact@mail.com">Contact</a></li>
+      <li class="footer__link footer__link--with-icon">
+        <i class="fas fa-utensils"></i> <a href="">Proposer un restaurant</a>
+      </li>
+      <li class="footer__link footer__link--with-icon">
+        <i class="fad fa-hands-helping"></i> <a href="">Devenir partenaire</a>
+      </li>
+      <li class="footer__link">
+        <a href="">Mentions légales</a>
+      </li>
+      <li class="footer__link">
+        <a href="mailto:contact@mail.com">Contact</a>
+      </li>
     </ul>
   </footer>
 
