--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <link rel="stylesheet" href="public/stylesheets/main.min.css">
   <link rel="icon" href="public/images/icon.png" type="image/png">
   <title>ohmyfood</title>
-  <meta name="description" content="Découvrez des restaurants d'exception, sélectionnés par nos soins.">
+  <meta name="description" content="Découvrez des restaurants d'exception,
+  sélectionnés par nos soins.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -24,17 +25,24 @@
       <i class="fas fa-map-marker-alt"></i>
       <span class="search__label--hidden">Location</span>
     </label>
-    <input type="text" id="location" class="search__input" value="Paris, Belleville" />
+    <input type="text" id="location" class="search__input"
+    value="Paris, Belleville" />
   </div>
 
   <section class="section-home section-home--centered">
-    <h2 class="section-home__heading section-home__heading--explore">Réservez le menu qui vous convient</h2>
-    <p class="section-home__p">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+    <h2 class="section-home__heading section-home__heading--explore">
+      Réservez le menu qui vous convient
+    </h2>
+    <p class="section-home__p">
+      Découvrez des restaurants d'exception, sélectionnés par nos soins.
+    </p>
     <a href="#restaurants" class="btn">Explorer nos restaurants</a>
   </section>
 
   <section class="section-home section-home--alt">
-    <h2 class="section-home__heading section-home__heading--centered">Fonctionnement</h2>
+    <h2 class="section-home__heading section-home__heading--centered">
+      Fonctionnement
+    </h2>
     <div class="operation__container">
       <div class="operation">
         <div class="operation__number">1</div>
@@ -55,7 +63,9 @@
   </section>
 
   <section class="section-home">
-    <h2 id="restaurants" class="section-home__heading section-home__heading--centered">Restaurants</h2>
+    <h2 id="restaurants" class="section-home__heading section-home__heading--centered">
+      Restaurants
+    </h2>
     <div class="card__container">
       <div class="card card--new">
         <div class="card__picture">
@@ -110,12 +120,22 @@
 
   <footer class="footer">
     <h2 class="footer__heading">ohmyfood</h2>
+
     <ul class="footer__links">
-      <li class="footer__link footer__link--with-icon"><i class="fas fa-utensils"></i> <a href="">Proposer un restaurant</a></li>
-      <li class="footer__link footer__link--with-icon"><i class="fad fa-hands-helping"></i> <a href="">Devenir partenaire</a></li>
-      <li class="footer__link"><a href="">Mentions légales</a></li>
-      <li class="footer__link"><a href="mailto:contact@mail.com">Contact</a></li>
+      <li class="footer__link footer__link--with-icon">
+        <i class="fas fa-utensils"></i> <a href="">Proposer un restaurant</a>
+      </li>
+      <li class="footer__link footer__link--with-icon">
+        <i class="fad fa-hands-helping"></i> <a href="">Devenir partenaire</a>
+      </li>
+      <li class="footer__link">
+        <a href="">Mentions légales</a>
+      </li>
+      <li class="footer__link">
+        <a href="mailto:contact@mail.com">Contact</a>
+      </li>
     </ul>
+
   </footer>
 
   <script src="https://kit.fontawesome.com/d898f2f582.js" crossorigin="anonymous"></script>
